# ClawFoxyVision

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: quality-check.yml
benches/: seq_prep.rs
docs/: CHANGELOG.md  FAQ.md  README.md  developer-guide.md  performance_optimization_plan.md  technical-reference.md  user-guide.md
scripts/: pre-commit.sh  profile_cpu.sh
src/: main.rs
src/minute/lstm/: step_1_tensor_preparation.rs
src/util/: feature_engineering.rs  file_utils.rs  metrics.rs  tensor_cache.rs
